<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BleConnector</string>
    <string name="app_title" translatable="false">BLE Connector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chart_scan">Chart</string>
    <string name="devices">Devices</string>
    <string name="server">Server</string>
    <string name="scan_running">Scanning is in progress, please stop it before.</string>
    <string name="scan_and_connect_before">Perform a scan and connect to a device before.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="uuid">UUID:</string>
    <string name="on_double_back_exit_text">Press once again to exit!</string>
    <string name="service_notification_title">BLE Connector</string>
    <string name="service_notification_exit">Exit</string>
    <string name="service_notification_content">GATT Server notification</string>
    <string name="permissions_title">Permissions</string>
    <string name="ble_permissions_required">The Bluetooth permissions are required</string>
    <string name="ble_not_supported">BLE feature not supported</string>
    <string name="ble_not_granted">BLE permission not granted</string>
    <string name="ble_currently_in_discovery">Bluetooth is currently in device discovery process.</string>
    <string name="ble_not_enabled">Bluetooth is NOT Enabled!</string>
    <string name="ble_enabled">Bluetooth is Enabled</string>
    <string name="snack_hide">HIDE</string>
    <string name="start_scan">Scan</string>
    <string name="stop_scan">Stop</string>
    <string name="error">Error</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="ble_scan_failed_already_started">Fails to start scan as BLE scan with the same settings is already started by the app.</string>
    <string name="ble_scan_failed_application_reg_failed">Fails to start scan as app cannot be registered.</string>
    <string name="ble_scan_failed_internal_error">Fails to start scan due an internal error</string>
    <string name="ble_scan_failed_feature_unsupported">Fails to start power optimized scan as this feature is not supported.</string>
    <string name="gatt_connect_timeout">GATT connect timeout</string>
    <string name="data">Data:</string>
    <string name="data_error_read_not_permitted">Read not permitted</string>
    <string name="data_error_write_not_permitted">Write not permitted</string>
    <string name="data_error_insufficient_authentication">Insufficient authentication</string>
    <string name="data_error_not_supported">Not supported</string>
    <string name="data_error_insufficient_encryption">Insufficient encryption</string>
    <string name="data_error_invalid_offset">Invalid offset</string>
    <string name="data_error_exceeds_the_max_length">Exceeds the max length</string>
    <string name="data_error_connection_is_congested">Connection is congested</string>
    <string name="data_error_gatt_operation_failed">GATT operation failed</string>
    <string name="properties">Properties:</string>
    <string name="property_broadcast">BROADCAST</string>
    <string name="property_read">READ</string>
    <string name="property_write_no_response">WRITE NO RESPONSE</string>
    <string name="property_write">WRITE</string>
    <string name="property_notify">NOTIFY</string>
    <string name="property_indicate">INDICATE</string>
    <string name="property_signed_write">SIGNED WRITE</string>
    <string name="property_extended_props">EXTENDED PROPS</string>
    <string name="characteristic_tilte">Characteristic</string>
    <string name="invalid_value">Invalid value</string>
    <string name="format_hint">Format</string>
    <string name="value_hint">Value in string</string>
    <string name="value_hint_hex">Value in hex</string>
    <string name="value_hint_hex_array">Value in hex (eg: 0x00 0x00 etc&#8230;)</string>
    <string name="error_write_characteristic">Unable to write characteristic</string>
    <string name="gatt_tab_scan">Scan</string>
    <string name="gatt_tab_details">Details</string>
    <string name="read_all">Read All</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="ble_appearance_unsupported">Unsupported</string>
    <string name="start_server">Start Server</string>
    <string name="current_time">Current Time</string>
    <string name="battery">Battery</string>
    <string name="system_id_manufacturer_identifier">Manufacturer Identifier</string>
    <string name="system_id_organizationally_unique_identifier">Organizationally Unique Identifier</string>
    <string name="pnp_id_vendor_id_source">Vendor ID Source</string>
    <string name="pnp_id_vendor_id">Vendor ID</string>
    <string name="pnp_id_product_id">Product ID</string>
    <string name="pnp_id_product_version">Product Version</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not supported</string>
    <string name="na">NN/A</string>
    <string name="ppcp_min_connection_interval">Minimum Connection Interval</string>
    <string name="ppcp_max_connection_interval">Maximum Connection Interval</string>
    <string name="ppcp_slave_latency">Slave Latency</string>
    <string name="ppcp_connection_supervision_timeout_multiplier">Connection Supervision Timeout Multiplier</string>
    <string name="alert_level_no">No</string>
    <string name="alert_level_medium">Medium</string>
    <string name="alert_level_high">High</string>
    <string name="start_of_affected_attribute_handle_range">Start of Affected Attr.</string>
    <string name="end_of_affected_attribute_handle_range">End of Affected Attr.</string>
    <string name="enable">Enable</string>
</resources>
