<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1"
    tools:context=".MainActivity">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_server" />
        <Switch
            android:id="@+id/swStartServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="80dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time" />
        <Switch
            android:id="@+id/swCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="80dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery" />
        <Switch
            android:id="@+id/swBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="80dp" />
    </TableRow>
</TableLayout>