<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:stretchColumns="1"
    android:background="@drawable/list_color_selector">

    <TableRow
        android:layout_marginTop="5dp">
        <TextView
            android:layout_span="2"
            android:id="@+id/tvName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_gravity="bottom"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivUpload"
                android:layout_marginEnd="10dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_file_upload_white"/>
            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_file_download_white"/>
        </LinearLayout>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/uuid"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/textColorDisabled"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textAlignment="viewStart"/>
        <TextView
            android:id="@+id/tvUUID"
            android:layout_span="2"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textAlignment="viewStart"/>
    </TableRow>
    <TableRow
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/properties"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/textColorDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_span="2"
            android:id="@+id/tvProperties"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textAlignment="viewStart"/>
    </TableRow>
    <TableRow
        android:id="@+id/trData"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/data"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/textColorDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_span="2"
            android:id="@+id/tvData"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textAlignment="viewStart"/>
    </TableRow>
</TableLayout>